[tool.poetry]
name = "aioudp"
description = "A better API for asynchronous UDP"
authors = ["Bryan Hu <thatxliner@gmail.com>"]
version = "2.0.0"

readme = "README.md"
license = "GPL-3.0-or-later"

classifiers = [
    # Get the list of trove classifiers here: https://pypi.org/classifiers/
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
]
documentation = "https://aioudp.readthedocs.io/en/latest/index.html"
homepage = "https://github.com/ThatXliner/aioudp"
keywords = ["udp", "asyncio"] # Maximum of 5 keywords

[tool.poetry.dependencies]
python = "^3.6"


[tool.poe.tasks]
# Code linting
mypy = { cmd = "mypy aioudp --strict", help = "Run MyPy on codebase" }
ruff = { cmd = "ruff check aioudp", help = "Run Ruff on codebase" }
check_black = { cmd = "black aioudp --check" }
check_imports = { cmd = "ruff check aioudp --select I" }
style = ["check_black", "check_imports"]
codebase = ["ruff", "mypy"]
[tool.poe.tasks.docs]
cmd = "sphinx-build docs build"
help = "Build documentation"

[tool.poe.tasks.format]
cmd = "shed"
help = "Format code"

[tool.poe.tasks.fix-ruff]
cmd = "ruff aioudp --fix"
help = "Ruff autofix"

[tool.poe.tasks.lint]
sequence = ["style", "codebase"]
help = "Lint codebase"

[tool.poe.tasks.test]
cmd = "pytest -vvv --cov=aioudp"
help = "Simply run test suite"

[tool.poe.tasks.ci]
cmd = "pytest -vvv --cov=aioudp --cov-report=xml"
help = "This workflow is for Github Actions"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Same as Black.
line-length = 88
select = ["ALL"]
ignore = [
    "S101", # "Use of assert detected. I use assert for MyPy
    # "D",    # "No docs"
    # "T20", # "Don't use print or pprint"
    # "ANN",  # Type annotation errors (or the lack of it)
    "ANN101", # The type annotation for `self` is inferred
    "FIX002", # "Line contains TODO, consider resolving the issue"
    "FBT",    # I actually don't know why this exists
    # and it seems useless so ignore it
    # Fix doc rule conflicts
    "D203",
    "D213",
    "D407",
    "D406",
]
target-version = "py36"
[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101", "D"]
"docs/conf.py" = ["INP001", "A001"]
